examples/bad/AccessibleLabel.tsx
export function IconOnlyButton() {
  return (
    <button onClick={openSettings}>
      <SettingsIcon />
    </button>
  );
}
